--- a/Examples/ROS/ORB_SLAM2/Data/TUM1.yaml
+++ b/Examples/ROS/ORB_SLAM2/Data/TUM1.yaml
@@ -1,31 +1,45 @@
 %YAML:1.0
 
+#--------------------------------------------------------------------------------------------
 # Camera Parameters. Adjust them!
+#--------------------------------------------------------------------------------------------
 
-# Camera calibration parameters (OpenCV) 
-Camera.fx: 1468.175971
-Camera.fy: 1467.764482 
-Camera.cx: 601.141453
-Camera.cy: 461.580106
+# Camera calibration and distortion parameters (OpenCV) 
+Camera.fx: 517.306408
+Camera.fy: 516.469215
+Camera.cx: 318.643040
+Camera.cy: 255.313989
 
-# Camera distortion paremeters (OpenCV) --
-Camera.k1: -0.196612
-Camera.k2: 0.181646
-Camera.p1: -0.00182
-Camera.p2: -9.399999999999999e-05
-Camera.k3:  -0.229548
+Camera.k1: 0.262383
+Camera.k2: -0.953104
+Camera.p1: -0.005358
+Camera.p2: 0.002628
+Camera.k3: 1.163314
+
+Camera.width: 640
+Camera.height: 480
 
 # Camera frames per second 
 Camera.fps: 30.0
 
+# IR projector baseline times fx (aprox.)
+Camera.bf: 40.0
+
 # Color order of the images (0: BGR, 1: RGB. It is ignored if images are grayscale)
 Camera.RGB: 1
 
+# Close/Far threshold. Baseline times.
+ThDepth: 50.0
+
+# Deptmap values factor 
+DepthMapFactor: 5000.0
+
 #--------------------------------------------------------------------------------------------
-### Changing the parameters below could seriously degradate the performance of the system
+# ORB Parameters
+#--------------------------------------------------------------------------------------------
 
 # ORB Extractor: Number of features per image
-ORBextractor.nFeatures: 2000
+ORBextractor.nFeatures: 1000
 
 # ORB Extractor: Scale factor between levels in the scale pyramid 	
 ORBextractor.scaleFactor: 1.2
@@ -33,23 +47,12 @@ ORBextractor.scaleFactor: 1.2
 # ORB Extractor: Number of levels in the scale pyramid	
 ORBextractor.nLevels: 8
 
-# ORB Extractor: Fast threshold (lower less restrictive)			
-#ORBextractor.fastTh: 20
 # ORB Extractor: Fast threshold
 # Image is divided in a grid. At each cell FAST are extracted imposing a minimum response.
 # Firstly we impose iniThFAST. If no corners are detected we impose a lower value minThFAST
-# You can lower these values if your images have low contrast                   
+# You can lower these values if your images have low contrast			
 ORBextractor.iniThFAST: 20
 ORBextractor.minThFAST: 7
-
-
-
-# ORB Extractor: Score to sort features. 0 -> Harris Score, 1 -> FAST Score			
-#ORBextractor.nScoreType: 1
-
-
-# Constant Velocity Motion Model (0 - disabled, 1 - enabled [recommended])
-#UseMotionModel: 1
 
 #--------------------------------------------------------------------------------------------
 # Viewer Parameters
@@ -57,12 +60,11 @@ ORBextractor.minThFAST: 7
 Viewer.KeyFrameSize: 0.05
 Viewer.KeyFrameLineWidth: 1
 Viewer.GraphLineWidth: 0.9
-Viewer.PointSize: 2
+Viewer.PointSize:2
 Viewer.CameraSize: 0.08
 Viewer.CameraLineWidth: 3
 Viewer.ViewpointX: 0
 Viewer.ViewpointY: -0.7
 Viewer.ViewpointZ: -1.8
 Viewer.ViewpointF: 500
-
 
