--- a/Examples/ROS/ORB_SLAM2/Data/TUM2.yaml
+++ b/Examples/ROS/ORB_SLAM2/Data/TUM2.yaml
@@ -5,16 +5,16 @@
 #--------------------------------------------------------------------------------------------
 
 # Camera calibration and distortion parameters (OpenCV) 
-Camera.fx: 529.21508098293293
-Camera.fy: 525.56393630057437
-Camera.cx: 328.94272028759258
-Camera.cy: 267.48068171871557
+Camera.fx: 520.908620
+Camera.fy: 521.007327
+Camera.cx: 325.141442
+Camera.cy: 249.701764
 
-Camera.k1: 0.26451622333009589
-Camera.k2: -0.83990749424620825
-Camera.p1: -0.0019922302173693159 
-Camera.p2: 0.0014371995932897616
-Camera.k3: 0.91192465078713847
+Camera.k1: 0.231222
+Camera.k2: -0.784899
+Camera.p1: -0.003257
+Camera.p2: -0.000105
+Camera.k3: 0.917205
 
 Camera.width: 640
 Camera.height: 480
@@ -32,14 +32,14 @@ Camera.RGB: 1
 ThDepth: 50.0
 
 # Deptmap values factor 
-DepthMapFactor: 5000.0
+DepthMapFactor: 5208.0
 
 #--------------------------------------------------------------------------------------------
 # ORB Parameters
 #--------------------------------------------------------------------------------------------
 
 # ORB Extractor: Number of features per image
-ORBextractor.nFeatures: 1500
+ORBextractor.nFeatures: 1000
 
 # ORB Extractor: Scale factor between levels in the scale pyramid 	
 ORBextractor.scaleFactor: 1.2
